--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -501,7 +501,7 @@
                     <div class="row footer_top">
                         <div class="col-lg-4 col-sm-7 wow fadeInLeft" data-wow-delay="0.2s">
                             <div class="f_widget info_widget">
-                                <a href="#" class="f_logo"><img src="img/Logo.png" alt=""></a>
+                                <a href="#" class="f_logo"><img src="img/axblogo2.svg" alt="AXB official logo" class="footer-logo"></a>
                                 <div class="info_list">
                                     <div class="info_item">
                                         <i class="ti-location-pin"></i>
@@ -509,7 +509,7 @@
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-mobile"></i>
-                                        <p><a href="tel:4355803031">+435-580-3031</a> /<a href="tel:4356284157">+435-628-4157</a></p>
+                                        <p><a href="tel:4355803031">+435-580-3031</a></p>
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-email"></i>
@@ -518,25 +518,10 @@
                                 </div>
                                 <div class="social_icon">
                                     <a href="#"><i class="ti-facebook"></i></a>
-                                    <a href="#"><i class="ti-pinterest"></i></a>
-                                    <a href="#"><i class="ti-twitter-alt"></i></a>
-                                    <a href="#"><i class="ti-vimeo-alt"></i></a>
-                                    <a href="#"><i class="ti-dribbble"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-5 wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="f_widget link_widget">
-                                <h2 class="f_title">Usefull Links</h2>
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Support Center (Faq)</a></li>
-                                    <li><a href="#">Features Overview</a></li>
-                                    <li><a href="#">Welcome Page</a></li>
-                                    <li><a href="#">Under Maintenance</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-sm-5 wow fadeInUp" data-wow-delay="0.6s">
                             <div class="f_widget link_widget">
                                 <h2 class="f_title">Navigation</h2>
                                 <ul class="list-unstyled">
@@ -547,20 +532,19 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-7 wow fadeInUp" data-wow-delay="0.8s">
-                            <div class="f_widget subscribe_widget">
-                                <h2 class="f_title">Subscribe to Our Newsletter</h2>
-                                <p>We are the leaders in the construction and building industries.</p>
-                                <form action="#" class="f_subscribe mailchimp">
-                                    <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                                    <button class="btn btn-submit" type="submit"><i class="fas fa-paper-plane"></i></button>
-                                    <p class="mchimp-errmessage" style="display: none;"></p>
-                                    <p class="mchimp-sucmessage" style="display: none;"></p>
-                                </form>
+                        <div class="col-lg-2 col-sm-5 wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="f_widget link_widget">
+                                <h2 class="f_title">Useful links</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Portfolio</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.4s">© 2019. All Rights Reserved. Design by <a href="#">Pixel Builders</a></div>
+                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.4s">© 2023. All Rights Reserved. Design by <a href="#">Pixel Builders</a></div>
                 </div>
             </footer>
         </div>
