removed features section

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -118,56 +118,7 @@
                     <i class="ti-arrow-right right_arrow"></i>
                 </div>
             </section>
-            <section class="con_features_area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                            <div class="media con_features_item">
-                                <div class="media_icon">
-                                    <img src="img/home-1/icon1.png" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h3>BEST QUALITY</h3>
-                                    <p>The full monty burke posh excuse my</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="media con_features_item">
-                                <div class="media_icon">
-                                    <img src="img/home-1/icon2.png" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h3>BEST QUALITY</h3>
-                                    <p>French Richard cheeky bobby</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <div class="media con_features_item">
-                                <div class="media_icon">
-                                    <img src="img/home-1/icon3.png" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h3>TOP RATED</h3>
-                                    <p>The full monty burke posh excuse my</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
-                            <div class="media con_features_item">
-                                <div class="media_icon">
-                                    <img src="img/home-1/icon4.png" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h3>MODERN TOOLS</h3>
-                                    <p>French Richard cheeky bobby</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
             <section class="con_about_area">
                 <div class="container">
                     <div class="row">
@@ -192,7 +143,7 @@
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR SERVICES</h6>
                         <h2 class="con_title">DEMOLITION & JUNK REMOVAL</h2>
-                        <p class="con_p">Wether it,s interior or exterior demolition we do it all. We specialize in the removal of hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you wi  ha clean slate and peace ofmind.</p>
+                        <p class="con_p">Wether it's interior or exterior demolition we do it all. We specialize in the removal of hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you wi  ha clean slate and peace ofmind.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.3s">
