removed contents of testimonials area

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -217,8 +217,8 @@
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR PORTFOLIO</h6>
-                        <h2 class="con_title">Our Latest Projects</h2>
-                        <p class="con_p">Twit cras excuse my French matie boy grub it’s all gone to pot off his nut butty<br> horse play blow off pardon you hanky panky.</p>
+                        <h2 class="con_title">Projects Gallery</h2>
+                        <p class="con_p"><br> horse play blow off pardon you hanky panky.</p>
                     </div>
                     <div id="portfolio_filter" class="portfolio_filter">
                         <div data-filter="*" class="work_portfolio_item active wow fadeInLeft" data-wow-delay="0.2s">ALL</div>
@@ -316,34 +316,9 @@
                 </div>
             </section>
             <section class="con_testimonial_area">
-                <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/testimonial-bg.jpg) no-repeat;"></div>
-                <div class="container">
-                    <div class="con_testimonial_info">
-                        <div class="custom_nav_two">
-                            <i class="ti-arrow-left prev"></i>
-                            <i class="ti-arrow-right next"></i>
-                        </div>
-                        <div class="con_testimonial_slider">
-                            <div class="testimonial_item">
-                                <div class="author_img"><img src="img/home-1/author.jpg" alt=""></div>
-                                <h5>Valentino Morose</h5>
-                                <h6>MANAGER</h6>
-                                <p>The whole difference between construction and creation is exactly this that a thing constructed can only be loved after it is constructed but a thing created is loved before it exists.</p>
-                            </div>
-                            <div class="testimonial_item">
-                                <div class="author_img"><img src="img/home-1/author.jpg" alt=""></div>
-                                <h5>Valentino Morose</h5>
-                                <h6>MANAGER</h6>
-                                <p>The whole difference between construction and creation is exactly this that a thing constructed can only be loved after it is constructed but a thing created is loved before it exists.</p>
-                            </div>
-                            <div class="testimonial_item">
-                                <div class="author_img"><img src="img/home-1/author.jpg" alt=""></div>
-                                <h5>Valentino Morose</h5>
-                                <h6>MANAGER</h6>
-                                <p>The whole difference between construction and creation is exactly this that a thing constructed can only be loved after it is constructed but a thing created is loved before it exists.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="container_testimonials">
+                    
+                    
                 </div>
             </section>
             <section class="con_team_area_two sec_gap bg_color">
