--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -289,35 +289,10 @@
                     </div>
                 </div>
             </section>
-            <section class="con_clients_logo">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-md-4">
-                            <div class="section_title">
-                                <h6 class="con_title_top">OUR Clients</h6>
-                                <h2 class="con_title">Honourable<br>Clients</h2>
-                            </div>
-                        </div>
-                        <div class="col-md-8 d-flex">
-                            <div class="con_logo_item">
-                                <a href="#"><img src="img/home-1/clients-logo/Logo1.png" alt=""></a>
-                            </div>
-                            <div class="con_logo_item">
-                                <a href="#"><img src="img/home-1/clients-logo/Logo2.png" alt=""></a>
-                            </div>
-                            <div class="con_logo_item">
-                                <a href="#"><img src="img/home-1/clients-logo/Logo5.png" alt=""></a>
-                            </div>
-                            <div class="con_logo_item">
-                                <a href="#"><img src="img/home-1/clients-logo/Logo4.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
             <section class="con_testimonial_area">
                 <div class="container_testimonials">
-                    
+                    <h6 class="con_title_top">See what people say about us</h6>
+                    <h2 class="con_title">Our testimonials</h2>
                     
                 </div>
             </section>
