--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -218,17 +218,16 @@
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR PORTFOLIO</h6>
                         <h2 class="con_title">Projects Gallery</h2>
-                        <p class="con_p"><br> horse play blow off pardon you hanky panky.</p>
+                        <p class="con_p">See some of our most recent projects in the gallery below<br></p>
                     </div>
                     <div id="portfolio_filter" class="portfolio_filter">
                         <div data-filter="*" class="work_portfolio_item active wow fadeInLeft" data-wow-delay="0.2s">ALL</div>
-                        <div data-filter=".con" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.4s">CONSTRUCTION</div>
-                        <div data-filter=".build" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.6s">BUILDING</div>
-                        <div data-filter=".com" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.7s">COMERCIAL</div>
-                        <div data-filter=".in" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.8s">INDUSTRIAL</div>
-                        <div data-filter=".design" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.9s">INTERIOR DESIGN</div>
+                        <div data-filter=".dem" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.4s">DEMOLITION</div>
+                        <div data-filter=".junk" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.6s">JUNK REMOVAL</div>
+                        <div data-filter=".com" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.7s">POOL DEMOLITION</div>
                     </div>
                     <div class="row portfolio_gallery" id="work-portfolio">
+
                         <div class="col-lg-4 col-sm-6 portfolio_item con in">
                             <div class="portfolio_img hover_effect">
                                 <img src="img/home-1/project/1.jpg" alt="">
@@ -249,7 +248,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item com design">
                             <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/3.jpg" alt="">
+                                <img src="img/home-1/project/3.jpg" alt="" class="port_img_size">
                                 <div class="hover_content">
                                     <h5><span>COMMERCIAL</span></h5>
                                     <h4><span>Round Office</span></h4>
@@ -290,7 +289,7 @@
                 </div>
             </section>
             <section class="con_testimonial_area">
-                <div class="container_testimonials">
+                <div class="container_testimonials section_title text-center wow fadeInUp">
                     <h6 class="con_title_top">See what people say about us</h6>
                     <h2 class="con_title">Our testimonials</h2>
                     
