--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -226,44 +226,62 @@
                         <div data-filter=".junk" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.6s">JUNK REMOVAL</div>
                         <div data-filter=".com" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.7s">POOL DEMOLITION</div>
                     </div>
+
                     <div class="row portfolio_gallery" id="work-portfolio">
 
                         <div class="col-lg-4 col-sm-6 portfolio_item con in">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/1.jpg" alt="">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/1.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item design build">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/2.jpg" alt="">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/2.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item com design">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/3.jpg" alt="" class="port_img_size">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/3.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item in con">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/4.jpg" alt="">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/4.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item design">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/5.jpg" alt="">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/5.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item build">
-                            <div class="portfolio_img hover_effect">
-                                <img src="img/home-1/project/6.jpg" alt="">
+                            <div class="portfolio_img ">
+                                <img src="img/home-1/project/6.jpg" alt="" class="small-image">
                             </div>
                         </div>
                     </div>
+
+                    <!-- modal window popup -->
+
+                    <div class="modal-window">
+                        <div>
+                            <button id="close-btn">X</button>
+                        </div>
+                        <div class="modal-image-area">
+                            <img class="large-image" src="" alt=""> 
+                        </div>
+                    </div>
+
+
+
+
                     <div class="text-center">
                         <a href="#" class="con_btn btn_effect">View All</a>
                     </div>
                 </div>
             </section>
+
+
             <section class="con_testimonial_area">
                 <div class="container_testimonials section_title text-center wow fadeInUp">
                     <h6 class="con_title_top">See what people say about us</h6>
@@ -425,6 +443,8 @@
             </footer>
         </div>
     </div>
+
+    <script src="js/modal.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.2.1.min.js"></script>
