added modal windos for gallery images

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -261,7 +261,7 @@
                         </div>
                     </div>
 
-                    <!-- modal window popup -->
+                    <!----------------- modal window popup ------------------->
 
                     <div class="modal-window">
                         <div>
@@ -272,13 +272,11 @@
                         </div>
                     </div>
 
-
-
-
                     <div class="text-center">
                         <a href="#" class="con_btn btn_effect">View All</a>
                     </div>
                 </div>
+                <div id="overlay"></div>
             </section>
 
 
