added all the anchor links to all html pages and standardized the styling of all pages.

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -30,13 +30,13 @@
                         <div class="header_info">
                             <div class="row align-items-center">
                                 <div class="col-lg-2">
-                                    <a href="#" class="header_top_logo"><img class="logo" src="img/axblogo2.svg" alt=""></a>
+                                    <a href="#" class="header_top_logo"><img class="logo" src="img/axblogo2.svg" alt="Official logo of AXB demolition"></a>
                                 </div>
                                 <div class="col-lg-10 text-right">
                                     <div class="header_contact_info">
                                         <a href="#"><i class="far fa-clock"></i>Monday - Friday 09:00 - 09:00</a>
                                         <a href="#"><i class="fas fa-phone"></i>Call Us: +999 999 999</a>
-                                        <a href="mailto:pixelbuilders@email.com"><i class="fas fa-envelope"></i>example@email.com</a>
+                                        <a href="mailto:axbdemolition@gmail.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto menu">
                                 <li class="nav-item dropdown submenu active">
-                                    <a class="nav-link dropdown-toggle" href="/" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link" href="#">
                                         HOME
                                     </a>
                                 </li>
@@ -74,7 +74,7 @@
                                 <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
                             </ul>
                             <ul class="list-unstyled search">
-                                <li><a href="#" class="con_btn btn_effect">GET A QUOTE</a></li>
+                                <li><a href="contact.html" class="con_btn btn_effect">GET A QUOTE</a></li>
                             </ul>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                         <h5 data-animation="fadeInUp" data-delay="0.3s">WELCOME TO AxB DEMOLITION AND JUNK REMOVAL</h5>
                                         <h1 data-animation="fadeInUp" data-delay="0.5s">OTTAWA’S PRIME  DEMOLITION COMPANY</h1>
                                         <!-- <p data-animation="fadeInUp" data-delay="0.9s"> For quotes please fill out our form to get a formal price  </p> -->
-                                        <a href="#" class="con_btn btn_effect" data-animation="fadeInRight" data-delay="1.1s">GET A QUOTE</a>
+                                        <a href="#quote" class="con_btn btn_effect" data-animation="fadeInRight" data-delay="1.1s">GET A QUOTE</a>
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +132,7 @@
                                 <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
                                 <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
                                 <p class="con_p wow fadeInUp" data-wow-delay="0.4s">As a specialized team, we excel in expertly dismantling and removing any unwanted structures or items from your residential or commercial premises.With our unwavering expertise and commitment, we turn your visions into reality with precision and efficiency.<br><br>Contact us to discuss your project needs and experience the difference with our team's expertise and personalized approach. </p>
-                                <a href="#" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
+                                <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -271,10 +271,12 @@
                             <img class="large-image" src="" alt=""> 
                         </div>
                     </div>
+                    <!----------------- modal window popup ------------------->
 
                     <div class="text-center">
-                        <a href="#" class="con_btn btn_effect">View All</a>
+                        <a href="portfolio.html" class="con_btn btn_effect">View All</a>
                     </div>
+
                 </div>
                 <div id="overlay"></div>
             </section>
@@ -291,8 +293,8 @@
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR TEAM</h6>
-                        <h2 class="con_title">Meet Our Heroes</h2>
-                        <p class="con_p">Twit cras excuse my French matie boy grub it’s all gone to pot off his nut butty<br> horse play blow off pardon you hanky panky.</p>
+                        <h2 class="con_title">Meet The Owner</h2>
+                        <!-- <p class="con_p"></p> -->
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.3s">
@@ -313,47 +315,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.5s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/home-1/team2.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Bodrum Salvador</h5>
-                                    </a>
-                                    <p>DESIGNER</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.7s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/home-1/team3.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Rodney Artichoke</h5>
-                                    </a>
-                                    <p>PROJECT ENGINEER</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
            
-            <section class="con_contact_area bg_color">
+            <section id="quote" class="con_contact_area bg_color">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-6 col-md-5 map_info">
