--- a/website-docs/service.html
+++ b/website-docs/service.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/slick/slick.css">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 
-    <title>Pixel Builders</title>
+    <title>AXB Demolition - Junk Removal</title>
 </head>
 
 <body>
@@ -31,15 +31,12 @@
                                 <div class="col-md-8 col-9">
                                     <div class="header_contact_info">
                                         <a href="#"><i class="fas fa-phone"></i>Call Us: +07 554 332 322</a>
-                                        <a href="mailto:pixelbuilders@email.com"><i class="fas fa-envelope"></i>pixelbuilders@email.com</a>
+                                        <a href="mailto:axbdemolition@gmail.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-3 text-right">
                                     <div class="h_social_icon">
                                         <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="fab fa-youtube"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -48,7 +45,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg header_one header_dark" id="header">
                     <div class="container">
-                        <a class="navbar-brand" href="#"><img src="img/Logo.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img class="logo" src="img/axblogo2.svg" alt="Official Logo of AXB Demolition"></a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_toggle">
                                 <span class="hamburger">
@@ -65,34 +62,15 @@
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
-                                <li class="nav-item dropdown submenu">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <li class="nav-item">
+                                    <a class="nav-link dropdown-toggle" href="index-2.html" >
                                         HOME
                                     </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="index.html" class="nav-link">Home One</a></li>
-                                        <li class="nav-item"><a href="index-2.html" class="nav-link">Home Two</a></li>
-                                        <li class="nav-item"><a href="index-3.html" class="nav-link">Home Three</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="service.html">SERVICES</a></li>
-                                <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
-                                <li class="nav-item"><a class="nav-link" href="team.html">TEAM</a></li>
-                                <li class="nav-item dropdown submenu">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        BLOG
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li>
-                                        <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
-                                        <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
-                            </ul>
-                            <ul class="list-unstyled search">
-                                <li><a href="#" class="search-btn"><i class="fas fa-search"></i></a></li>
+                                    <li class="nav-item active"><a class="nav-link" href="service.html">SERVICES</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT US</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="team.html">PRICING</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="portfolio.html">GALLERY</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
                             </ul>
                         </div>
                     </div>
