completed meet the owner section

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -296,22 +296,20 @@
                         <h2 class="con_title">Meet The Owner</h2>
                         <!-- <p class="con_p"></p> -->
                     </div>
-                    <div class="row">
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.3s">
+                    <div class="row owner">
+                        <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
                             <div class="con_team_item_two">
                                 <div class="team_img hover_effect">
                                     <img src="img/home-1/team1.jpg" alt="team1">
                                     <div class="social_icon">
                                         <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
                                     </div>
                                 </div>
                                 <div class="content">
                                     <a href="#">
-                                        <h5>Jarvis Pepperspray</h5>
+                                        <h5>Alex Bertrand</h5>
                                     </a>
-                                    <p>CIVIL ENGINEER</p>
+                                    <p>OWNER</p>
                                 </div>
                             </div>
                         </div>
@@ -323,8 +321,10 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-6 col-md-5 map_info">
-                            <div id="mapBox2" class="mapBox2" data-lat="40.701083" data-lon="-74.1522848" data-zoom="12" data-marker="img/location.png" data-info="54B, Tailstoi Town 5238 La city, IA 522364" data-mlat="40.701083" data-mlon="-74.1522848">
-                            </div>
+                            <!-- <div id="mapBox2" class="mapBox2" data-lat="40.701083" data-lon="-74.1522848" data-zoom="12" data-marker="img/location.png" data-info="54B, Tailstoi Town 5238 La city, IA 522364" data-mlat="40.701083" data-mlon="-74.1522848">
+                            </div> -->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d89607.8237521422!2d-75.59863944434638!3d45.42457258965346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1691974829583!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                         </div>
                         <div class="col-lg-6 col-md-7">
                             <div class="contact_info">
@@ -371,7 +371,7 @@
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-email"></i>
-                                        <p><a href="mailto:pixelbuilderstheme@gmail.com">pixelbuilderstheme@gmail.com</a></p>
+                                        <p><a href="mailto:axbdemolition@gmail.com">axbdemolition@gmail.com</a></p>
                                     </div>
                                 </div>
                                 <div class="social_icon">
@@ -408,7 +408,6 @@
         </div>
     </div>
 
-    <script src="js/modal.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.2.1.min.js"></script>
