removed interactive skills area

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -187,7 +187,7 @@
                     </div>
                 </div>
             </section>
-            <section class="con_skill_area">
+            <!-- <section class="con_skill_area">
                 <div class="container">
                     <div class="cons_skill_info">
                         <div class="skill_item">
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="con_latest_project_area bg_color">
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
@@ -311,6 +311,11 @@
                                     </a>
                                     <p>OWNER</p>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
+                            <div class="con_team_item_two">
+                                <p>Ths is the following text</p>
                             </div>
                         </div>
                     </div>
