--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -34,8 +34,8 @@
                                 </div>
                                 <div class="col-lg-10 text-right">
                                     <div class="header_contact_info">
-                                        <a href="#"><i class="far fa-clock"></i>Monday - Friday 09:00 - 09:00</a>
-                                        <a href="#"><i class="fas fa-phone"></i>Call Us: +999 999 999</a>
+                                        <a href="#"><i class="far fa-clock"></i>Monday - Saturday  08:00AM - 06:30PM</a>
+                                        <a href="tel:+1 613 913 1899"><i class="fas fa-phone"></i>Call Us: +1 613 913 1899</a>
                                         <a href="mailto:axbdemolition@gmail.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
@@ -180,10 +180,10 @@
                 <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/video_bg.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="con_video_content">
-                        <a href="https://www.youtube.com/watch?v=sU3FkzUKHXU" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
+                        <a href="https://www.youtube.com/embed/OM7Muan7JVc" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
                             <span></span>
                         </a>
-                        <h2>We will provide you the best work<br> which you dreamt for!</h2>
+                        <h2>We will provide you the best <br>in terms of quality and service! </h2>
                     </div>
                 </div>
             </section>
@@ -313,11 +313,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
+                       <!--  <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
                             <div class="con_team_item_two">
                                 <p>Ths is the following text</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
